[API-686] Added break all to ensure URLs and such non-breaking strings wrap correctly

--- a/assets/scss/modules/_code.scss
+++ b/assets/scss/modules/_code.scss
@@ -13,6 +13,7 @@ pre.snippet--block {
 
 .snippet--inline {
   font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+  word-break: break-all;
 }
 
 code.snippet--inline { 
@@ -28,5 +29,3 @@ code.snippet--inline {
   padding: 3px 8px 1px 8px;
   @include border-radius(5px);
 }
-
-
